<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="95dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="137dp"
                android:layout_height="137dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/computer" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="272dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name2"
                android:textColor="#00ACC1"
                android:textSize="45sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hintname"
                android:ems="10"
                android:hint="@string/hintname"
                android:inputType="textWebEmailAddress|textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/surname"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hintsurname"
                android:ems="10"
                android:hint="@string/hintsurname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Username"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hint1"
                android:ems="10"
                android:hint="@string/hint1"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="#100F0F"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hint2"
                android:ems="10"
                android:hint="@string/hint2"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/student" />

            <CheckBox
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teacher" />
        </LinearLayout>

        <Button
            android:id="@+id/signup2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>