<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <Space
            android:layout_width="match_parent"
            android:layout_height="95dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="137dp"
                android:layout_height="137dp"
                app:srcCompat="@drawable/computer" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="272dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name2"
                android:textColor="#00ACC1"
                android:textSize="45sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="49dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="324dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:autofillHints="@string/hint1"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/custom_username"
            android:ems="10"
            android:hint="@string/hint1"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="324dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:autofillHints="@string/hint2"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/custom_password"
            android:ems="10"
            android:hint="@string/hint2"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="267dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/student" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teacher" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="98dp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textColorHint="#9C1414"
            android:textColorLink="#881919"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textColorHint="#9C1414"
            android:textColorLink="#881919"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>