<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="65dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="137dp"
                android:layout_height="137dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/computer" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical"
                android:text="@string/app_name2"
                android:textColor="#00ACC1"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/course"
                android:gravity="center"
                android:text="@string/courses" />

            <Space
                android:layout_width="45dp"
                android:layout_height="60dp"
                android:background="#480D9A" />

            <Button
                android:id="@+id/button6"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/announcement"
                android:gravity="center"
                android:text="@string/announcements" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/message"
                android:text="@string/messaging" />

            <Space
                android:layout_width="45dp"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/homework"
                android:text="@string/assignments" />
        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>