<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageTeacher">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-64dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="137dp"
                android:layout_height="137dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/computer" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical"
                android:text="@string/app_name2"
                android:textColor="#00ACC1"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/courses"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/course"
                android:gravity="center"
                android:text="@string/courses" />

            <Space
                android:layout_width="45dp"
                android:layout_height="60dp"
                android:background="#480D9A" />

            <Button
                android:id="@+id/annoucement"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/announcement"
                android:text="@string/announcements" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/messaging"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/message"
                android:text="@string/messaging" />

            <Space
                android:layout_width="45dp"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/assignment"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:background="@drawable/button"
                android:drawableTop="@drawable/homework"
                android:text="@string/assignments" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/upload"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:background="@drawable/button"
            android:drawableTop="@drawable/uploadbutton"
            android:text="Uploads" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>